#  Copyright © 2018-2025 Commonwealth Scientific and Industrial Research
#  Organisation (CSIRO) ABN 41 687 119 230.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathling"
dynamic = ["version"]
description = "Python API for Pathling"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache License, version 2.0" }
authors = [
    { name = "Australian e-Health Research Centre, CSIRO", email = "pathling@csiro.au" }
]
keywords = ["pathling", "fhir", "analytics", "spark", "standards", "terminology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pyspark>=4.0.0,<4.1.0",
    "deprecated>=1.2.13",
]

[project.urls]
Homepage = "https://github.com/aehrc/pathling"

[dependency-groups]
dev = [
    "Sphinx>=1.6,<8",
    "sphinx-rtd-theme==1.2.2",
    "pytest==8.2.0",
    "ipython==8.10.0",
    "wheel==0.43.0",
    "twine==5.0.0",
    "build==1.2.1",
    "pytest-cov==5.0.0",
    "http-server-mock==1.7",
]

[tool.hatch.version]
path = "pathling/_version.py"
pattern = '__version__="(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["pathling"]
artifacts = [
    "target/dependency/*.jar",
]

[tool.hatch.build.targets.wheel.shared-data]
"examples" = "share/pathling/examples"

[tool.hatch.build.targets.sdist]
include = [
    "/pathling",
    "/examples",
    "/README.md",
    "/LICENSE",
]
